--- a/bot/admin/web/src/app/bot/story/story-dialog.component.html
+++ b/bot/admin/web/src/app/bot/story/story-dialog.component.html
@@ -38,7 +38,7 @@
              (change)="intent = $event.target.value"
              required>
     </mat-form-field>
-    <mat-autocomplete #intentAuto="matAutocomplete">
+    <mat-autocomplete #intentAuto="matAutocomplete"  autoActiveFirstOption>
       <mat-optgroup *ngFor="let category of intentCategories" [label]="category.category">
         <mat-option *ngFor="let intent of category.intents" [value]="intent.name">
           {{intent.intentLabel()}}
@@ -51,7 +51,7 @@
              matTooltip="Category" (keyup)="categoryChange()" (focus)="categoryChange()"
              [matAutocomplete]="catAuto">
     </mat-form-field>
-    <mat-autocomplete #catAuto="matAutocomplete">
+    <mat-autocomplete #catAuto="matAutocomplete" autoActiveFirstOption>
       <mat-option *ngFor="let c of categories" [value]="c">{{c}}</mat-option>
       </mat-autocomplete>
     <!-- description -->
