resolves #468 bot flow: allow to create story from the bot flow screen
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot/flow/flow.component.css
+++ b/bot/admin/web/src/app/bot/flow/flow.component.css
@@ -29,3 +29,21 @@ tock-cytoscape {
 .checkbox {
   margin-left: 10px;
 }
+
+.selected-node {
+  height: 90%;
+  width: 20%;
+  float: left;
+  overflow: auto;
+  overflow-x: hidden;
+  margin-top:10px;
+}
+
+.selected-edge {
+  height: 90%;
+  width: 20%;
+  float: left;
+  overflow: auto;
+  overflow-x: hidden;
+  margin-top:10px;
+}
