--- a/bot/admin/web/src/app/bot/story/story.component.html
+++ b/bot/admin/web/src/app/bot/story/story.component.html
@@ -42,6 +42,10 @@
       </ul>
     </div>
 
+    <!-- default answer -->
+    Main Answer:
+    <tock-answer class="answer" [answer]="story" [fullDisplay]="fullDisplay" [create]="!story._id"></tock-answer>
+
     <!-- steps -->
     <div *ngIf="story.steps.length !== 0">
       Steps
@@ -53,13 +57,11 @@
       </ul>
     </div>
 
-    <!-- default answer -->
-    Main Answer:
-    <tock-answer class="answer" [answer]="story" [fullDisplay]="fullDisplay"></tock-answer>
-
-    <!-- steps -->
-
   </mat-card-content>
+  <mat-card-actions *ngIf="storyNode">
+    <button *ngIf="story._id" (click)="deleteStory()" mat-raised-button color="warn">Delete Story</button>
+    <button *ngIf="!story._id" (click)="saveNewStory()" mat-raised-button color="primary">Create Story</button>
+  </mat-card-actions>
 </mat-card>
 <mat-card *ngIf="!story && storyNode">
   <mat-card-title>
