--- a/bot/admin/web/src/app/bot/story/answer-dialog.component.html
+++ b/bot/admin/web/src/app/bot/story/answer-dialog.component.html
@@ -1,7 +1,7 @@
-<h1 mat-dialog-title *ngIf="create">And New Answer</h1>
-<h1 mat-dialog-title *ngIf="!create">Update Answer</h1>
+<h1 mat-dialog-title *ngIf="create">And New {{answerLabel}}</h1>
+<h1 mat-dialog-title *ngIf="!create">Update {{answerLabel}}</h1>
 <div class="container">
-  <tock-answer [answer]="answer" [fullDisplay]="true"></tock-answer>
+  <tock-answer [answer]="answer" [fullDisplay]="true" (submit)="save()" [answerLabel]="answerLabel"></tock-answer>
 </div>
 <mat-dialog-actions>
   <button mat-stroked-button (click)="cancel()">Cancel</button>
