resolves #482 bot admin: add ability to upload file in media card
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot/story/media/media-dialog.component.css
+++ b/bot/admin/web/src/app/bot/story/media/media-dialog.component.css
@@ -14,6 +14,10 @@
  * limitations under the License.
  */
 
+.subTitle {
+  font-style: italic;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -54,4 +58,9 @@
 
 .actions {
   display: table;
+}
+
+.image {
+  max-height: 50px;
+  max-width: 50px;
 }
