--- a/bot/admin/web/src/app/bot/story/step-dialog.component.html
+++ b/bot/admin/web/src/app/bot/story/step-dialog.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-title>Actions</h1>
 <div class="container">
-  <tock-steps [steps]="steps" [defaultCategory]="defaultCategory"></tock-steps>
+  <tock-steps [steps]="steps" [defaultCategory]="defaultCategory" class="steps"></tock-steps>
 </div>
 <mat-dialog-actions>
   <button mat-stroked-button (click)="cancel()">Cancel</button>
