--- a/bot/admin/web/src/app/bot/story/steps.component.html
+++ b/bot/admin/web/src/app/bot/story/steps.component.html
@@ -1,7 +1,19 @@
-<div *ngFor="let s of steps">
-  <tock-step [step]="s" (delete)="deleteStep($event)" [defaultCategory]="defaultCategory"></tock-step>
-</div>
-<div>
+<mat-tree [dataSource]="dataSource" [treeControl]="treeControl" class="tree">
+
+  <mat-tree-node *matTreeNodeDef="let node" matTreeNodePadding>
+    <button *ngIf="!isExpandable(node)" mat-icon-button disabled></button>
+    <button *ngIf="isExpandable(node)" mat-icon-button matTreeNodeToggle
+            [attr.aria-label]="'toggle ' + node.filename">
+      <mat-icon class="mat-icon-rtl-mirror">
+        {{treeControl.isExpanded(node) ? 'expand_more' : 'chevron_right'}}
+      </mat-icon>
+    </button>
+    <tock-step [step]="node" (delete)="deleteStep($event)" (child)="addNewStep(node)" [defaultCategory]="defaultCategory" class="step" [readonly]="readonly"></tock-step>
+  </mat-tree-node>
+</mat-tree>
+
+
+<div *ngIf="!readonly" class="action">
   <button mat-button (click)="addNewStep()" color="primary">
     Add Action
   </button>
