--- a/bot/admin/web/src/app/bot/story/story.component.html
+++ b/bot/admin/web/src/app/bot/story/story.component.html
@@ -1,7 +1,8 @@
 <mat-card *ngIf="story">
   <mat-card-title>
     <span *ngIf="!storyNode" class="answer-title" matTooltip="Story name">{{story.name}}</span>
-    <span *ngIf="storyNode" class="answer-title" matTooltip="Story name" [matBadge]="storyNode.displayCount()" matBadgeOverlap="false">{{story.name}}</span>
+    <span *ngIf="storyNode" class="answer-title" matTooltip="Story name" [matBadge]="storyNode.displayCount()"
+          matBadgeOverlap="false">{{story.name}}</span>
     <button mat-icon-button color="primary" matTooltip="Edit" (click)="editStory()">
       <mat-icon>edit</mat-icon>
     </button>
@@ -19,7 +20,7 @@
     <span class="intent" matTooltip="Main Intent">{{story.intent.name}}</span>
     <span class="category" matTooltip="Story category">&nbsp;[{{story.category}}]</span>
     <div>
-    {{story.description}}
+      {{story.description}}
     </div>
     <ul *ngIf="storyNode">
       <li *ngIf="storyNode.intent">Intent: <b>{{storyNode.intent}}</b></li>
@@ -38,27 +39,29 @@
         <mat-icon>extension</mat-icon>
       </button>
       <ul>
-        <li *ngFor="let e of story.mandatoryEntities">{{e.role}} <span class="intent" matTooltip="Intent requested">[{{e.intent.name}}]</span>: <tock-answer class="answer" [answer]="e" [editable]="false"></tock-answer></li>
+        <li *ngFor="let e of story.mandatoryEntities">{{e.role}} <span class="intent"
+                                                                       matTooltip="Intent requested">[{{e.intent.name}}
+          ]</span>:
+          <tock-answer class="answer" [answer]="e" [editable]="false"></tock-answer>
+        </li>
       </ul>
     </div>
 
     <!-- default answer -->
     <label for="main_answer" class="label-answer">Answer :</label>
-    <tock-answer id="main_answer" class="answer" [answer]="story" [fullDisplay]="fullDisplay" [create]="!story._id" (submit)="saveStory(true)"></tock-answer>
+    <tock-answer id="main_answer" class="answer" [answer]="story" [fullDisplay]="fullDisplay" [create]="!story._id"
+                 (submit)="saveStory(true)"></tock-answer>
 
     <!-- steps -->
     <mat-divider *ngIf="displaySteps" [inset]="true" class="divider"></mat-divider>
-    <tock-steps *ngIf="displaySteps" [steps]="story.steps" [defaultCategory]="story.category"></tock-steps>
-
     <div *ngIf="!displaySteps && story.steps.length !== 0">
       Actions
       <button mat-icon-button matTooltip="Edit Actions" (click)="editSteps()">
         <mat-icon>dns</mat-icon>
       </button>
-      <ul>
-        <li *ngFor="let s of story.steps">{{s.userSentence}} <span class="intent" matTooltip="Action Intent">[{{s.intent.name}}]</span>: <tock-answer class="answer" [answer]="s" [editable]="false"></tock-answer></li>
-      </ul>
     </div>
+    <tock-steps [steps]="story.steps" [defaultCategory]="story.category"
+                [readonly]="!displaySteps"></tock-steps>
 
   </mat-card-content>
   <mat-card-actions *ngIf="storyNode">
