--- a/bot/admin/web/src/app/bot/story/simple-answer.component.html
+++ b/bot/admin/web/src/app/bot/story/simple-answer.component.html
@@ -33,7 +33,7 @@
   <button mat-icon-button
           class="mediaButton"
           [color]="newMedia ? 'primary' : 'secondary'"
-          matTooltip="Choose media message"
+          matTooltip="Edit Media Message"
           (click)="displayMediaMessage()">
     <mat-icon>perm_media</mat-icon>
   </button>
