--- a/bot/admin/web/src/app/bot/story/steps.component.html
+++ b/bot/admin/web/src/app/bot/story/steps.component.html
@@ -11,10 +11,11 @@
     <tock-step [step]="node" (delete)="deleteStep($event)" (child)="addNewStep(node)" [defaultCategory]="defaultCategory" class="step" [readonly]="readonly"></tock-step>
   </mat-tree-node>
 </mat-tree>
-
-
 <div *ngIf="!readonly" class="action">
   <button mat-button (click)="addNewStep()" color="primary">
-    Add Action
+    <mat-icon>dns</mat-icon> Add Action
   </button>
 </div>
+
+
+
