--- a/bot/admin/web/src/app/bot/story/story.component.html
+++ b/bot/admin/web/src/app/bot/story/story.component.html
@@ -1,22 +1,33 @@
-<mat-card *ngIf="story">
-  <mat-card-title>
-    <span *ngIf="!storyNode" class="answer-title" matTooltip="Story name">{{story.name}}</span>
-    <span *ngIf="storyNode" class="answer-title" matTooltip="Story name" [matBadge]="storyNode.displayCount()"
-          matBadgeOverlap="false">{{story.name}}</span>
-    <button mat-icon-button color="primary" matTooltip="Edit" (click)="editStory()">
-      <mat-icon>edit</mat-icon>
-    </button>
-    <button class="actionButton" mat-icon-button matTooltip="Edit Mandatory Entities" (click)="editEntities()">
-      <mat-icon>extension</mat-icon>
-    </button>
-    <button *ngIf="!displaySteps" class="actionButton" mat-icon-button matTooltip="Edit Actions" (click)="editSteps()">
-      <mat-icon>dns</mat-icon>
-    </button>
-    <button *ngIf="story._id" mat-icon-button color="warn" matTooltip="Delete" (click)="deleteStory()">
-      <mat-icon>delete</mat-icon>
-    </button>
-  </mat-card-title>
-  <mat-card-subtitle>
+<mat-expansion-panel *ngIf="story" [expanded]="storyNode || !story._id" [hideToggle]="storyNode || !story._id" #expansionPanel (opened)="story.hideDetails = false">
+  <mat-expansion-panel-header>
+    <mat-panel-title>
+      <span *ngIf="!storyNode" matTooltip="Story name" class="answer-title">{{story.name}}</span>
+      <span *ngIf="storyNode" matTooltip="Story name" [matBadge]="storyNode.displayCount()"
+            matBadgeOverlap="false" class="answer-title">{{story.name}}</span>
+    </mat-panel-title>
+    <mat-panel-description>
+      <tock-answer *ngIf="!storyNode && story._id" class="answer" [answer]="story" [fullDisplay]="false"></tock-answer>
+      <button mat-icon-button color="primary" matTooltip="Edit" (click)="$event.stopPropagation();editStory()">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <!--button *ngIf="!fullDisplay" mat-icon-button color="primary" matTooltip="View Story Details"
+              (click)="$event.stopPropagation();selectStory()">
+        <mat-icon>zoom_in</mat-icon>
+      </button-->
+      <button mat-icon-button matTooltip="Edit Mandatory Entities" (click)="$event.stopPropagation();editEntities()">
+        <mat-icon>extension</mat-icon>
+      </button>
+      <button mat-icon-button matTooltip="Edit Actions" (click)="$event.stopPropagation();editSteps()">
+        <mat-icon>dns</mat-icon>
+      </button>
+      <button *ngIf="story._id" mat-icon-button color="warn" matTooltip="Delete" (click)="$event.stopPropagation();deleteStory()">
+        <mat-icon>delete</mat-icon>
+      </button>
+    </mat-panel-description>
+
+  </mat-expansion-panel-header>
+
+  <div>
     <span class="intent" matTooltip="Main Intent">{{story.intent.name}}</span>
     <span class="category" matTooltip="Story category">&nbsp;[{{story.category}}]</span>
     <div>
@@ -28,10 +39,13 @@
       <li *ngIf="storyNode.entities.length !==0">Entities: <b>{{storyNode.entities}}</b></li>
       <li>{{storyNode.count}} {{storyNode.count === 1 ? 'instance' : 'instances'}}</li>
     </ul>
-  </mat-card-subtitle>
+  </div>
 
+  <div *ngIf="!story.hideDetails">
+    <div class="fullDisplayDivider" *ngIf="fullDisplay"></div>
+    <mat-divider *ngIf="fullDisplay" [inset]="true" class="divider"></mat-divider>
+    <div class="fullDisplayDivider" *ngIf="fullDisplay"></div>
 
-  <mat-card-content>
     <!-- mandatory entities -->
     <div *ngIf="story.mandatoryEntities.length !== 0">
       Mandatory Entities
@@ -45,16 +59,24 @@
           <tock-answer class="answer" [answer]="e" [editable]="false"></tock-answer>
         </li>
       </ul>
+      <div class="fullDisplayDivider" *ngIf="fullDisplay"></div>
+      <mat-divider *ngIf="fullDisplay" [inset]="true" class="divider"></mat-divider>
+      <div class="fullDisplayDivider" *ngIf="fullDisplay"></div>
     </div>
 
     <!-- default answer -->
-    <label for="main_answer" class="label-answer">Answer :</label>
+    <label *ngIf="!fullDisplay" for="main_answer" class="label-answer">Answer :</label>
+    <div *ngIf="fullDisplay">
+      Answer
+      <div class="fullDisplayDivider"></div>
+    </div>
     <tock-answer id="main_answer" class="answer" [answer]="story" [fullDisplay]="fullDisplay" [create]="!story._id"
                  (submit)="saveStory(true)"></tock-answer>
 
     <!-- steps -->
+    <div *ngIf="displaySteps" class="fullDisplayDivider"></div>
     <mat-divider *ngIf="displaySteps" [inset]="true" class="divider"></mat-divider>
-    <div *ngIf="!displaySteps && story.steps.length !== 0">
+    <div *ngIf="story.steps.length !== 0">
       Actions
       <button mat-icon-button matTooltip="Edit Actions" (click)="editSteps()">
         <mat-icon>dns</mat-icon>
@@ -63,11 +85,13 @@
     <tock-steps [steps]="story.steps" [defaultCategory]="story.category"
                 [readonly]="!displaySteps"></tock-steps>
 
-  </mat-card-content>
-  <mat-card-actions *ngIf="storyNode">
+  </div>
+  <mat-action-row *ngIf="storyNode || story._id">
     <button *ngIf="!story._id" (click)="saveNewStory()" mat-raised-button color="primary">Create Story</button>
-  </mat-card-actions>
-</mat-card>
+    <button *ngIf="story._id" (click)="expansionPanel.close();" mat-button>Cancel</button>
+    <button *ngIf="story._id" (click)="saveStory(false);expansionPanel.close();" mat-raised-button color="primary">Update Story</button>
+  </mat-action-row>
+</mat-expansion-panel>
 <mat-card *ngIf="!story && storyNode">
   <mat-card-title>
     <span class="answer-title" matTooltip="Story name" [matBadge]="storyNode.displayCount()"
