fixes #486 [bot admin] story create button does not work
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot/story/create-story.component.html
+++ b/bot/admin/web/src/app/bot/story/create-story.component.html
@@ -26,7 +26,8 @@
                (keyup.enter)="onSentence(newSentence.value)">
       </mat-form-field>
       <button *ngIf="story && story.userSentence.length !== 0" color="primary" mat-button
-              (click)="onSentence(newSentence.value)">Add
+              (click)="onSentence()">
+        Add
       </button>
         <br>
         <div *ngIf="displayStory" class="separator"></div>
