--- a/bot/admin/web/src/app/bot/story/story.component.html
+++ b/bot/admin/web/src/app/bot/story/story.component.html
@@ -71,7 +71,7 @@
       <div class="fullDisplayDivider"></div>
     </div>
     <tock-answer id="main_answer" class="answer" [answer]="story" [fullDisplay]="fullDisplay" [create]="!story._id"
-                 (submit)="saveStory(true)"></tock-answer>
+                 [submit]="submit"></tock-answer>
 
     <!-- steps -->
     <div *ngIf="displaySteps" class="fullDisplayDivider"></div>
@@ -89,7 +89,7 @@
   <mat-action-row *ngIf="storyNode || story._id">
     <button *ngIf="!story._id" (click)="saveNewStory()" mat-raised-button color="primary">Create Story</button>
     <button *ngIf="story._id" (click)="expansionPanel.close();" mat-button>Cancel</button>
-    <button *ngIf="story._id" (click)="saveStory(false);expansionPanel.close();" mat-raised-button color="primary">Update Story</button>
+    <button *ngIf="story._id" (click)="saveStory();expansionPanel.close();" mat-raised-button color="primary">Update Story</button>
   </mat-action-row>
 </mat-expansion-panel>
 <mat-card *ngIf="!story && storyNode">
