--- a/bot/admin/web/src/app/bot/i18n/i18n.component.html
+++ b/bot/admin/web/src/app/bot/i18n/i18n.component.html
@@ -47,7 +47,9 @@
   </mat-form-field>
   <span class="fill-remaining-space"></span>
   <button mat-button (click)="validateAll()" matTooltip="Validate all existing labels">Validate all</button>
-  <button mat-button (click)="complete()">Complete all fields</button>
+  <button *ngIf="state.currentApplication.supportedLocales.length !== 1" mat-icon-button (click)="complete()" matTooltip="Translate All Missing Labels">
+    <mat-icon>translate</mat-icon>
+  </button>
 
   <button mat-icon-button (click)="displayImportExport = true" matTooltip="Import / Export">
     <mat-icon>import_export</mat-icon>
@@ -55,9 +57,8 @@
 </mat-toolbar>
 
 <mat-card *ngIf="displayImportExport">
-  <mat-card-title>Import / Export Panel</mat-card-title>
+  <mat-card-title>Import / Export</mat-card-title>
 
-  <button mat-raised-button (click)="displayImportExport = false" color="accent">Close Panel</button>
   <button mat-button (click)="downloadCsv()" matTooltip="Download Csv">
     <mat-icon>file_download</mat-icon>
     Download CSV
@@ -74,6 +75,7 @@
     <mat-icon>file_upload</mat-icon>
     Upload JSON
   </button>
+  <button mat-raised-button (click)="displayImportExport = false">Close</button>
 
   <mat-card *ngIf="displayUpload">
     <mat-card-title>Upload a {{uploadType}} File</mat-card-title>
