--- a/bot/admin/web/src/app/bot/story/step.component.html
+++ b/bot/admin/web/src/app/bot/story/step.component.html
@@ -7,7 +7,7 @@
   </mat-form-field>
 
   <!-- intent -->
-  <mat-form-field class="input">
+  <mat-form-field class="input input-intent">
     <input matInput name="intent" placeholder="Intent" [(ngModel)]="step.intent.name"
            matTooltip="Intent starting the Action"
            [matAutocomplete]="intentAuto"
@@ -18,6 +18,16 @@
 
   <!-- answer -->
   <tock-answer [answer]="step" class="entity-button"></tock-answer>&nbsp;
+
+  <!-- target intent -->
+  <mat-form-field class="input input-intent">
+    <input matInput name="targetIntent" placeholder="Target Intent" [(ngModel)]="step.targetIntent.name"
+           matTooltip="Intent to switch when reaching the step"
+           [matAutocomplete]="intentAuto"
+           (keyup)="onIntentChange(step, $event.target.value)"
+           (focus)="onIntentChange(step, $event.target.value)"
+           (blur)="validateIntent(step, true)">
+  </mat-form-field>
 
   <div class="entity-button">
     <button mat-icon-button color="warn"
